Gpencil Texture Rotation issue when object is rotated. #64441

Closed
opened 2019-05-10 16:05:34 +02:00 by (Deleted) · 8 comments
(Deleted) commented 2019-05-10 16:05:34 +02:00 (Migrated from localhost:3001)

System Information
Operating system: Windows-10-10.0.14393 64 Bits
Graphics card: Intel(R) HD Graphics 4400 Intel 4.3.0 - Build 20.19.15.5063

Blender Version
Broken: version: 2.80 (sub 60), branch: master (modified), commit date: 2019-05-09 18:50, hash: 427c75e4c2
Worked: (optional)

Short description of error
[Please fill out a short description of the error here]

When we rotate the view of GP object with textured strokes, the texture orientation is different when viewing from right and while viewing from left.

Front view image.png
Right View image.png
Left View image.png

FollowDrwPathOff.gif

FollowDrwPathOn.gif

pepeland_GP_brush_pack_V1.blend

Exact steps for others to reproduce the error
[Please describe the exact steps needed to reproduce the issue]
[Based on the default startup or an attached .blend file (as simple as possible)]

**System Information** Operating system: Windows-10-10.0.14393 64 Bits Graphics card: Intel(R) HD Graphics 4400 Intel 4.3.0 - Build 20.19.15.5063 **Blender Version** Broken: version: 2.80 (sub 60), branch: master (modified), commit date: 2019-05-09 18:50, hash: `427c75e4c2` Worked: (optional) **Short description of error** [Please fill out a short description of the error here] When we rotate the view of GP object with textured strokes, the texture orientation is different when viewing from right and while viewing from left. Front view ![image.png](https://archive.blender.org/developer/F7025015/image.png) Right View ![image.png](https://archive.blender.org/developer/F7025070/image.png) Left View ![image.png](https://archive.blender.org/developer/F7025023/image.png) ![FollowDrwPathOff.gif](https://archive.blender.org/developer/F7025063/FollowDrwPathOff.gif) ![FollowDrwPathOn.gif](https://archive.blender.org/developer/F7025066/FollowDrwPathOn.gif) [pepeland_GP_brush_pack_V1.blend](https://archive.blender.org/developer/F7025072/pepeland_GP_brush_pack_V1.blend) **Exact steps for others to reproduce the error** [Please describe the exact steps needed to reproduce the issue] [Based on the default startup or an attached .blend file (as simple as possible)]
(Deleted) commented 2019-05-10 16:05:34 +02:00 (Migrated from localhost:3001)
Author

Added subscriber: @(Deleted)

Added subscriber: @(Deleted)
(Deleted) commented 2019-05-10 16:26:54 +02:00 (Migrated from localhost:3001)
Author

Same file viewed in previous build and seems to be working fine:
image.png
image.png
image.png
image.png

Same file viewed in previous build and seems to be working fine: ![image.png](https://archive.blender.org/developer/F7025118/image.png) ![image.png](https://archive.blender.org/developer/F7025104/image.png) ![image.png](https://archive.blender.org/developer/F7025106/image.png) ![image.png](https://archive.blender.org/developer/F7025114/image.png)
Antonio Vazquez was assigned by Brecht Van Lommel 2019-05-13 22:25:16 +02:00

@pattamp This is a limitation of the method used to align the texture to the stroke in the billboard. I was thinking in adding an option to disable this behaviour, but now it's enabled by default and in situations like this would be useful to turn off.

@pattamp This is a limitation of the method used to align the texture to the stroke in the billboard. I was thinking in adding an option to disable this behaviour, but now it's enabled by default and in situations like this would be useful to turn off.
(Deleted) commented 2019-05-14 10:56:59 +02:00 (Migrated from localhost:3001)
Author

for the time being i have revert

In #64441#678438, @antoniov wrote:
@pattamp This is a limitation of the method used to align the texture to the stroke in the billboard. I was thinking in adding an option to disable this behaviour, but now it's enabled by default and in situations like this would be useful to turn off.

so can this be fixed? or have a work around?

for the time being i have revert > In #64441#678438, @antoniov wrote: > @pattamp This is a limitation of the method used to align the texture to the stroke in the billboard. I was thinking in adding an option to disable this behaviour, but now it's enabled by default and in situations like this would be useful to turn off. so can this be fixed? or have a work around?

@pattamp I going to investigate how to add a switch to disable it. You cannot fix it yourself.

@pattamp I going to investigate how to add a switch to disable it. You cannot fix it yourself.
Author

This issue was referenced by 254b1a4294

This issue was referenced by 254b1a4294d06ae44f45a68b6756787392ce1fc1

@pattamp I'm adding a new option to disable the follow drawing path. Before it had only a switch, now there is a list of options.

image.png

Modes:

  • Path: Follows drawing stroke and rotate with object.
  • Object: Only follows object rotation.
  • None: Don't rotate.

In your example, you need set to None. This was the default value in previous build. The build with problems had Object by default.

@pattamp I'm adding a new option to disable the follow drawing path. Before it had only a switch, now there is a list of options. ![image.png](https://archive.blender.org/developer/F7036021/image.png) Modes: * **Path:** Follows drawing stroke and rotate with object. * **Object:** Only follows object rotation. * **None**: Don't rotate. In your example, you need set to None. This was the default value in previous build. The build with problems had Object by default.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64441
No description provided.