source/blender/draw/engines/gpencil/shaders/gpencil_point_geom.glsl
@@ -1,6 +1,6 @@
 uniform vec2 Viewport;
 uniform int xraymode;
-uniform int use_follow_path;
+uniform int follow_mode;
 
 layout(points) in;
 layout(triangle_strip, max_vertices = 4) out;
@@ -19,6 +19,9 @@ out vec2 mTexCoord;
 #define M_PI 3.14159265358979323846  /* pi */
 #define M_2PI 6.28318530717958647692 /* 2*pi */
 #define FALSE 0
+
+/* keep this definition equals to GP_STYLE_FOLLOW_NONE value */
+#define NONE 2
 
 /* project 3d point to 2d on screen space */
 vec2 toScreenSpace(vec4 vertex)
@@ -69,11 +72,9 @@ float getAngle(vec2 pt0, vec2 pt1)
     return 0.0;
   }
 
-  /* disable, but keep for future follow modes 	
-  if (use_follow_path == FALSE) {
+  if (follow_mode == NONE) {
     return 0.0;
   }
-  */
 
   /* default horizontal line (x-axis) in screen space */
   vec2 v0 = vec2(1.0, 0.0);
